--- a/index.html
+++ b/index.html
@@ -1,3 +1,6 @@
-<html>
+<!DOCTYPE html>
+<html lang="en">
+<body>
 <iframe style="width: 100%; height: 100px; overflow: hidden;" src="https://twitter.com/UMtony/status/1552063938082361345?s=20&t=mVvCCCjX-5TJebLTF7OHYA" width="100" height="100" scrolling="no">Iframes not supported</iframe>
+</body>
 </html>
