--- a/index.html
+++ b/index.html
@@ -1,6 +1,18 @@
 <!DOCTYPE html>
 <html lang="en">
 <body>
-<iframe style="width: 100%; height: 100px; overflow: hidden;" src="https://twitter.com/UMtony/status/1552063938082361345?s=20&t=mVvCCCjX-5TJebLTF7OHYA" width="100" height="100" scrolling="no">Iframes not supported</iframe>
-</body>
+<!-- <iframe style="width: 100%; height: 100px; overflow: hidden;" src="https://twitter.com/UMtony/status/1552063938082361345?s=20&t=mVvCCCjX-5TJebLTF7OHYA" width="100" height="100" scrolling="no">Iframes not supported</iframe> -->
+<ul class="social-buttons">
+  <li>
+    <a href="http://twitter.com/umtony" class="btn btn-just-icon btn-simple btn-twitter" target="_blank">
+      Twitter
+    </a>
+  </li>
+  <li>
+    <a href="https://twitter.com/UMtony/status/1552063938082361345?s=20&t=mVvCCCjX-5TJebLTF7OHYA" class="btn btn-just-icon btn-simple btn-twitter" target="_blank">
+      Youtube
+    </a>
+  </li>
+</ul>
+  </body>
 </html>
